# SnJake_Baikal_Swin_Anime

./: Example Workflow.json  LICENSE  LICENSE.md  README.md  __init__.py  anime_upscale_nodes.py  pyproject.toml
training_code/: __init__.py  config.yaml  config_SwinFIR.yaml  config_SwinFIR_finetune.yaml  config_SwinFIR_finetune_v31.yaml  config_v1_old.yaml  convert_to_safetensors.py  data.py  eval_perceptual.py  infer.py  loss_calc.py  losses.py  metrics.py  model.py  requirements.txt  train.py  train_perceptual.py  utils.py  validate_upscaler.py
