[project]
name = "snjake_baikal_swin_anime"
description = "SnJake Baikal-Swin-Anime x2 is a custom ComfyUI node for upscaling anime/illustration images with a dedicated restoration model."
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["huggingface_hub"]

[project.urls]
Repository = "https://github.com/SnJake/SnJake_Baikal_Swin_Anime"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/SnJake/SnJake_Baikal_Swin_Anime/wiki"
"Bug Tracker" = "https://github.com/SnJake/SnJake_Baikal_Swin_Anime/issues"

[tool.comfy]
PublisherId = ""
DisplayName = "SnJake_Baikal_Swin_Anime"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

