[project]
name = "snjake_baikal_swin_anime"
description = "SnJake Baikal-Swin-Anime x2 is a custom ComfyUI node for upscaling anime/illustration images with a dedicated restoration model."
version = "1.0.1"
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Environment :: GPU :: NVIDIA CUDA",
]

dependencies = ["huggingface_hub"]

[project.urls]
Repository = "https://github.com/SnJake/SnJake_Baikal_Swin_Anime"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/SnJake/SnJake_Baikal_Swin_Anime/wiki"
"Bug Tracker" = "https://github.com/SnJake/SnJake_Baikal_Swin_Anime/issues"

[tool.comfy]
PublisherId = "snjake"
DisplayName = "SnJake_Baikal_Swin_Anime"
Icon = ""
includes = [] 
"requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

